[package]
name = "rustpass"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustpass"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
